tests/errors/test_02.x
// Identifier redeclared

let x: i64 = 21;
let x: i64 = 21;

fn main() -> void {}
